--- a/t/01-example1.html
+++ b/t/01-example1.html
@@ -1,13 +1,13 @@
 <html><body><table width=100% border=2 cellspacing=1 cellpadding=1>
 <tr>
 <td valign=top>&nbsp;</td>
-<th>Monday</th>
-<th>Tuesday</th>
-<th colspan=3>Wednesday</th>
-<th>Thursday</th>
-<th>Friday</th>
-<th>Saturday</th>
-<th>Sunday</th>
+<th>Week day 1</th>
+<th>Week day 2</th>
+<th colspan=3>Week day 3</th>
+<th>Week day 4</th>
+<th>Week day 5</th>
+<th>Week day 6</th>
+<th>Week day 7</th>
 </tr>
 <tr><td>08:00</td>
 <td align=center>&nbsp;</td>
