--- a/t/02-calendar.html
+++ b/t/02-calendar.html
@@ -3,13 +3,13 @@
 <table width=100% border=2 cellspacing=1 cellpadding=1>
 <tr>
 <td valign=top>&nbsp;</td>
-<th>Monday<br>2020-11-02</th>
-<th>Tuesday<br>2020-11-03</th>
-<th colspan=3>Wednesday<br>2020-11-04</th>
-<th>Thursday<br>2020-11-05</th>
-<th>Friday<br>2020-11-06</th>
-<th>Saturday<br>2020-11-07</th>
-<th>Sunday<br>2020-11-08</th>
+<th>weekday 1</th>
+<th>weekday 2</th>
+<th colspan=3>weekday 3</th>
+<th>weekday 4</th>
+<th>weekday 5</th>
+<th>weekday 6</th>
+<th>weekday 0</th>
 </tr>
 <tr><td>08:00</td>
 <td align=center>&nbsp;</td>
