--- a/t/02-calendar.html
+++ b/t/02-calendar.html
@@ -3,13 +3,13 @@
 <table width=100% border=2 cellspacing=1 cellpadding=1>
 <tr>
 <td valign=top>&nbsp;</td>
-<th>weekday 1</th>
-<th>weekday 2</th>
-<th colspan=3>weekday 3</th>
-<th>weekday 4</th>
-<th>weekday 5</th>
-<th>weekday 6</th>
-<th>weekday 0</th>
+<th>weekday_1</th>
+<th>weekday_2</th>
+<th colspan=3>weekday_3</th>
+<th>weekday_4</th>
+<th>weekday_5</th>
+<th>weekday_6</th>
+<th>weekday_0</th>
 </tr>
 <tr><td>08:00</td>
 <td align=center>&nbsp;</td>
